# MSAligner

./: README.md  requirements.txt  setup.py
20251016_Alignment/: sequences.fasta
20251120_lab/: README.md  sequences.fasta
20251120_lab/ratez/: bio.py
20251125/: alignment.fasta
20251125/newu3/: write.py
Labs/2025-10-01/: README.md  spike.aln  (+2 more)
data/: example2.fasta
docs/: pipeline_diagram.md
final-project-TaylorPowell/: BINF6112 - Taylor Powell - Final Project Pseudocode and Flowchart.docx  LICENSE  README.md  projectSummary.md  project_pseudo.md  pyproject.toml  setup.py
final-project-TaylorPowell/20251016_Alignment/: 20251016_pandas_part2.md  alignment.fasta
final-project-TaylorPowell/20251120_lab/: main.py
final-project-TaylorPowell/20251120_lab/newu3/: num.py
final-project-TaylorPowell/20251125/kmers/: kmers.py
final-project-TaylorPowell/data/: example.fasta  example3.fasta  example4.fasta  seq1.fasta  seq2.fasta
final-project-TaylorPowell/msaligner/: __init__.py  kmer_similarity.py
final-project-TaylorPowell/results/: aligned_amino_acids.fasta  aligned_nucleotides.fasta  codon_statistics.csv
final-project-TaylorPowell/src/msaligner/: __init__.py  alignment.py  cli.py  kmer_similarity.py  statistics.py  visualization.py
final-project-TaylorPowell/src/msaligner.egg-info/: PKG-INFO  requires.txt  top_level.txt
final-project-TaylorPowell/tests/: __init__.py  test_alignment.py  test_back_translation.py  test_kmer_similarity.py  test_orf_detection.py  test_statistics.py
tests/: test_alignment.py  test_orf_detection.py  test_statistics.py
(+141 files in other folders)
