[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msaligner"
version = "1.0.0"
description = "Translation-Based Multiple Sequence Aligner"
authors = [{name = "Taylor C. Powell"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "biopython>=1.79",
]

[project.scripts]
msaligner = "msaligner.cli:main"